<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.KartonPacijentaActivity">

    <TextView
        android:id="@+id/karton_pacijenta_tv_headline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/TextHeadStyle"
        android:text="@string/karton_pacijenta_head_text"/>

    <ImageView
        android:id="@+id/karton_pacijenta_logo_img"
        app:layout_constraintTop_toBottomOf="@id/karton_pacijenta_tv_headline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_convention"
        android:contentDescription="@string/karton_pacijenta_head_text"
        android:src="@drawable/drug"
        android:scaleType="centerCrop"/>

    <EditText
        android:id="@+id/karton_pacijenta_et_ime"
        app:layout_constraintTop_toBottomOf="@id/karton_pacijenta_logo_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/EditTextStyle"
        android:autofillHints="@string/ime"
        android:hint="@string/ime"
        android:text="@string/ime"/>

    <EditText
        android:id="@+id/karton_pacijenta_et_prezime"
        app:layout_constraintTop_toBottomOf="@id/karton_pacijenta_et_ime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/EditTextStyle"
        android:hint="@string/prezime"
        android:autofillHints="@string/prezime"
        android:text="@string/prezime"/>

    <TextView
        android:id="@+id/karton_pacijenta_tv_stanje"
        app:layout_constraintTop_toBottomOf="@id/karton_pacijenta_et_prezime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/TextStyle"
        android:text="@string/karton_pacijenta_stanje"/>

    <EditText
        android:id="@+id/karton_pacijenta_et_stanje"
        app:layout_constraintTop_toBottomOf="@id/karton_pacijenta_tv_stanje"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/EditTextStyle"
        android:autofillHints="@string/karton_pacijenta_stanje"
        android:hint="@string/karton_pacijenta_stanje"
        android:text="@string/stanje"/>

    <TextView
        android:id="@+id/karton_pacijenta_tv_trenutno_stanje"
        app:layout_constraintTop_toBottomOf="@id/karton_pacijenta_et_stanje"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/TextStyle"
        android:text="@string/karton_pacijenta_trenutno_stanje"/>

    <EditText
        android:id="@+id/karton_pacijenta_et_trenutno_stanje"
        app:layout_constraintTop_toBottomOf="@id/karton_pacijenta_tv_trenutno_stanje"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/EditTextStyle"
        android:autofillHints="@string/karton_pacijenta_trenutno_stanje"
        android:hint="@string/karton_pacijenta_trenutno_stanje"
        android:text="@string/stanje"/>

    <TextView
        android:id="@+id/karton_pacijenta_tv_datum_prijema"
        app:layout_constraintTop_toBottomOf="@id/karton_pacijenta_et_trenutno_stanje"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/TextStyle"
        android:text="@string/karton_pacijenta_datum_prijema"/>

    <TextView
        android:id="@+id/karton_pacijenta_tv_datum"
        app:layout_constraintTop_toBottomOf="@id/karton_pacijenta_tv_datum_prijema"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/TextStyle"
        android:text="@string/datum"/>


    <Button
        android:id="@+id/karton_pacijenta_btn_odustani"
        style="@style/ButtonStyle"
        android:text="@string/odustani"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/karton_pacijenta_btn_izmeni"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/karton_pacijenta_btn_izmeni"
        style="@style/ButtonStyle"
        android:text="@string/izmeni"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/karton_pacijenta_btn_odustani" />

</androidx.constraintlayout.widget.ConstraintLayout>