<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:layout_margin="@dimen/margin_item"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/hospitalizovani_patient_image"
            style="@style/ImageStyleForItem"
            android:src="@drawable/patch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/hospitalizovani_patient_ime"
            android:text="@string/ime_value"
            style="@style/TextStyleForItem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/hospitalizovani_patient_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/hospitalizovani_patient_prezime"
            android:text="@string/prezime_value"
            style="@style/TextStyleForItem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/hospitalizovani_patient_image"
            app:layout_constraintTop_toBottomOf="@id/hospitalizovani_patient_ime" />


        <Button
            android:id="@+id/hospitalizovani_patient_btn_karton"
            android:paddingStart="@dimen/padding"
            android:paddingEnd="@dimen/padding"
            android:text="@string/karton"
            style="@style/ButtonStyleForItem"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/hospitalizovani_patient_btn_otpust"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@id/hospitalizovani_patient_image" />

        <Button
            android:id="@+id/hospitalizovani_patient_btn_otpust"
            android:text="@string/otpust"
            style="@style/ButtonStyleForItem"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@id/hospitalizovani_patient_btn_karton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>