<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:layout_margin="@dimen/margin_item"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/cekaonica_patient_image"
            style="@style/ImageStyleForItem"
            android:src="@drawable/patch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cekaonica_patient_ime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_item"
            android:text="@string/ime_value"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintEnd_toStartOf="@id/cekaonica_patient_prezime"
            app:layout_constraintStart_toEndOf="@id/cekaonica_patient_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cekaonica_patient_prezime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_item"
            android:text="@string/prezime_value"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintStart_toEndOf="@id/cekaonica_patient_ime"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cekaonica_patient_stanje"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_item"
            android:ellipsize="end"
            android:text="@string/simptomi_value"
            android:textAppearance="?android:attr/textAppearanceSmall"
            app:layout_constraintBottom_toTopOf="@id/cekaonica_patient_btn_zdrav"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cekaonica_patient_image"
            app:layout_constraintTop_toBottomOf="@id/cekaonica_patient_ime" />

        <Button
            android:id="@+id/cekaonica_patient_btn_zdrav"
            android:paddingStart="@dimen/padding"
            android:paddingEnd="@dimen/padding"
            android:text="@string/zdrav"
            style="@style/ButtonStyleForItem"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cekaonica_patient_btn_hospitalizacija"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@id/cekaonica_patient_image" />

        <Button
            android:id="@+id/cekaonica_patient_btn_hospitalizacija"
            android:text="@string/hospitalizacija"
            style="@style/ButtonStyleForItem"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@id/cekaonica_patient_btn_zdrav" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>