<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:layout_margin="@dimen/margin_item"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/otpusteni_patient_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="@dimen/margin_item"
            android:scaleType="centerCrop"
            android:src="@drawable/patch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/otpusteni_patient_ime"
            android:text="@string/ime_value"
            style="@style/TextStyleForItem"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/otpusteni_patient_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/otpusteni_patient_prezime"
            android:text="@string/prezime_value"
            style="@style/TextStyleForItem"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/otpusteni_patient_image"
            app:layout_constraintTop_toBottomOf="@id/otpusteni_patient_ime" />

        <TextView
            android:id="@+id/otpusteni_patient_vreme"
            android:text="@string/datum"
            style="@style/TextStyleForItem"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>